fixed web3 update loop; sync status

--- a/app/less/colors.less
+++ b/app/less/colors.less
@@ -26,8 +26,16 @@
 @color-danger: @color-secondary-1-4;
 @color-success: @color-secondary-2-4;
 @color-warning: @color-complement-4;
+@color-danger-text: @color-secondary-1-4;
+@color-success-text: @color-secondary-2-4;
+@color-warning-text: @color-complement-4;
+
 @color-default: @color-primary-2;
-@color-default-inverse: #D3BDB1;
 @color-default-strong: @color-primary-1;
-@color-default-strong-inverse: #DCD4CF;
+@color-default-light: @color-primary-0;
+
 @color-default-strong-intense: #000000;
+
+@color-default-text: #D3BDB1;
+@color-default-strong-text: #DCD4CF;
+@color-default-highlight: #ffffff;
