--- a/app/less/footer.less
+++ b/app/less/footer.less
@@ -1,6 +1,11 @@
 #footer{
-  padding: 0 10px;
+  padding: 1px 10px 0px;
   .icon-status{
     margin-left: 10px;
+  }
+  .blockcount{
+    margin-right: 10px;
+    padding-right: 10px;
+    border-right: 1px solid @color-default-strong-intense;
   }
 }
