--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,25 +1,45 @@
 @import "colors.less";
-@import "footer.less";
-@import "heading.less";
 
+#react-root{
+  @import "footer.less";
+  @import "heading.less";
+  @import "mainSidebar.less";
+  .icon{
+    &.icon-danger{
+      color: @color-danger;
+    }
+    &.icon-warning{
+      color: @color-warning;
+    }
+    &.icon-success{
+      color: @color-success;
+    }
+    &.icon-default{
+      color: @color-default-text;
+    }
+  }
 
-.icon{
-  &.icon-danger{
-    color: @color-danger;
+  .text-danger{
+    color: @color-danger-text;
   }
-  &.icon-warning{
-    color: @color-warning;
+  .text-warning{
+    color: @color-warning-text;
   }
+  .text-success{
+    color: @color-success-text;
+  }
+  
 }
+
 
 
 .toolbar{
   background-image: none;
-  background-color: @color-primary-1;
-  border-color: @color-default-strong-intense;
+  background-color: @color-default;
+  border-color: @color-default-strong;
   box-shadow: none;
   .text, .title{
-    color: @color-default-strong-inverse;;
+    color: @color-default-text;
   }
 }
 
@@ -28,13 +48,14 @@
   
   &.btn-default{
     background-color: @color-default;
-    border-color: @color-default-strong-inverse;
-    color: @color-default-inverse;
+    border-color: @color-default-text;
+    color: @color-default-text;
     .icon{
-      color: @color-default-inverse;
+      color: @color-default-text;
     }
     &:hover{
       background-color: @color-default-strong;
+      color: @color-default-strong-text;
     }
   }
 }
@@ -42,11 +63,12 @@
 .pane-group{
   &.pane-default{
     .sidebar{
-      background-color: @color-default-strong;
+      background-color: @color-default;
     }
     .pane{
-      background-color: @color-default;
+      background-color: @color-default-light;
       border-color: @color-default-strong-intense;
     }
   }
 }
+
