--- a/app/less/colors.less
+++ b/app/less/colors.less
@@ -3,6 +3,7 @@
 @color-primary-2: #2C424E;
 @color-primary-3: #206387;
 @color-primary-4: #0B71A8;
+@color-primary-5: #030B10;
 
 @color-secondary-1-0: #A9493C;/* Main Secondary color (1) */
 @color-secondary-1-1: #4B3936;
@@ -26,16 +27,23 @@
 @color-danger: @color-secondary-1-4;
 @color-success: @color-secondary-2-4;
 @color-warning: @color-complement-4;
+@color-info: @color-primary-4;
+
 @color-danger-text: @color-secondary-1-4;
 @color-success-text: @color-secondary-2-4;
 @color-warning-text: @color-complement-4;
 
 @color-default: @color-primary-2;
 @color-default-strong: @color-primary-1;
+@color-default-xstrong: @color-primary-5;
 @color-default-light: @color-primary-0;
+@color-default-xlight: @color-primary-3; 
+@color-default-xxlight: @color-primary-4; 
 
 @color-default-strong-intense: #000000;
 
 @color-default-text: #D3BDB1;
+@color-default-light-text: #D5AB94;
 @color-default-strong-text: #DCD4CF;
-@color-default-highlight: #ffffff;
+@color-default-xstrong-text: #FCF4EF;
+@color-text-bright: #ffffff;
