--- a/app/less/main.less
+++ b/app/less/main.less
@@ -4,6 +4,7 @@
   @import "footer.less";
   @import "heading.less";
   @import "mainSidebar.less";
+  @import "mainContent.less";
   .icon{
     &.icon-danger{
       color: @color-danger;
@@ -49,13 +50,33 @@
   &.btn-default{
     background-color: @color-default;
     border-color: @color-default-text;
-    color: @color-default-text;
-    .icon{
+
+    &, .icon{
       color: @color-default-text;
     }
-    &:hover{
+    &:hover:not([disabled]){
       background-color: @color-default-strong;
       color: @color-default-strong-text;
+    }
+    &[disabled],
+    &[disabled]:hover {
+      .icon{
+        color: @color-default-strong;
+      }
+    }
+  }
+  &.btn-default-strong{
+    background-color: @color-default-strong;
+    border-color: @color-default-strong-text;
+    &, .icon{
+      color: @color-default-strong-text;
+    }
+    &:hover{
+      background-color: @color-default-xstrong;
+      border-color: @color-default-xstrong-text;
+      &,.icon{
+        color: @color-default-xstrong-text;
+      }
     }
   }
 }
@@ -66,9 +87,21 @@
       background-color: @color-default;
     }
     .pane{
-      background-color: @color-default-light;
+      background-color: @color-default-strong;
       border-color: @color-default-strong-intense;
     }
   }
 }
 
+table td{
+  -webkit-user-select: initial;
+}
+
+.btn,
+.btn:focus,
+input,
+textarea,
+select{
+  outline:0;
+  box-shadow:none !important;
+}
