back/forward; tx details, tx overview

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -79,6 +79,18 @@
       }
     }
   }
+
+  .icon-hover-state{
+    display: none;
+  }
+  &:hover{
+    .icon-initial-state{
+      display: none;
+    }
+    .icon-hover-state{
+      display: inline;
+    }
+  }
 }
 
 .pane-group{
