--- a/app/less/mainSidebar.less
+++ b/app/less/mainSidebar.less
@@ -2,11 +2,14 @@
   .nav-group-item, .nav-group-title{
     color: @color-default-text;
   }
+  .nav-group-item:hover{
+    color: @color-default-xstrong-text;
+  }
   .nav-group-item.active,
   .nav-group-item.active .icon,
   .nav-group-item:active,
   .nav-group-item:active .icon {
-    color: @color-default-strong-text;
+    color: @color-default-xstrong-text;
     background-color: @color-default-strong;
   }
 }
