--- a/app/less/heading.less
+++ b/app/less/heading.less
@@ -1,5 +1,17 @@
 #heading{
   .toolbar-actions{
     padding-left: 100px;
+    margin-top: 6px;
+  }
+  input.search{
+    height: 24px;
+    vertical-align: middle;
+    border-radius: 4px;
+    border: none;
+    background-color: @color-default-xstrong-text;
+    color: @color-default-xstrong;
+    margin-left: 20px;
+    width: 250px;
+    padding: 0 5px;
   }
 }
