plugin prototype: google web page

--- a/app/less/colors.less
+++ b/app/less/colors.less
@@ -25,6 +25,7 @@
 
 
 @color-danger: @color-secondary-1-4;
+@color-danger-dim: @color-secondary-1-3;
 @color-success: @color-secondary-2-4;
 @color-warning: @color-complement-4;
 @color-info: @color-primary-4;
