--- a/app/less/main.less
+++ b/app/less/main.less
@@ -5,6 +5,7 @@
   @import "heading.less";
   @import "mainSidebar.less";
   @import "mainContent.less";
+  @import "errorNotification.less";
   .icon{
     &.icon-danger{
       color: @color-danger;
