--- a/app/less/mainContent.less
+++ b/app/less/mainContent.less
@@ -12,6 +12,14 @@
     }
     
   }
+  .plugin-view{
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
   .main-pane-container{
     padding: 20px 30px;
     table{
