--- a/app/less/mainContent.less
+++ b/app/less/mainContent.less
@@ -60,6 +60,7 @@
       label, .form-control{
         margin-bottom: 20px;
         display: table-cell;
+        font-weight:normal;
       }
       select{
         height: 32px;
